@@ -99,6 +99,7 @@ AC_DEFUN(REGINA_LIB_BOOST_PYTHON, [
   AC_CHECK_HEADERS([boost/shared_ptr.hpp], [
     __regina_py_save_cxxflags="$CXXFLAGS"
     __regina_py_save_ldflags="$LDFLAGS"
+    __regina_py_save_libs="$LIBS"
     __regina_py_ok=0
     for pyver in python python2.3 python2.2; do
       for incdir in "/usr/include/$pyver" "/usr/local/include/$pyver" \
@@ -126,24 +127,31 @@ AC_DEFUN(REGINA_LIB_BOOST_PYTHON, [
 	
             # Check for -lpython.
             for pylib in "$pyver" python python2.3 python2.2; do
-              AC_MSG_CHECKING([for lib$pylib with $incdir/Python.h])
-              LDFLAGS="$__regina_py_save_ldflags -l$pylib"
-              AC_TRY_COMPILE([
-                #include <Python.h>
-              ], [
-                Py_Initialize(); Py_Finalize();
-              ], [
-                AC_MSG_RESULT([yes])
+              for pylibdir in "/usr/lib/" "/usr/local/lib" "/usr/lib/$pyver/config/" \
+		"/usr/local/lib/$pyver/config"; do
+		for extralibs in "" "-lpthread -lm -lutil -ldl"; do
+                  AC_MSG_CHECKING([for $pylibdir/lib$pylib and $extralibs with $incdir/Python.h])
+		  LDFLAGS="$__regina_py_save_ldflags -L$pylibdir"
+		  LIBS="-l$pylib $extralibs"
+		  AC_TRY_LINK([
+		    #include <Python.h>
+		  ], [
+		    Py_Initialize(); Py_Finalize();
+		  ], [
+		    AC_MSG_RESULT([yes])
 
-                # And we're done!
-                BOOST_PYTHON_INCLUDES="-I$incdir"
-                BOOST_PYTHON_LIBS="-lboost_python"
-                PYTHON_LIBS="-l$pylib"
-                __regina_py_ok=1
-              ], [
-                AC_MSG_RESULT([no])
-              ])
-              if test "$__regina_py_ok" = "1"; then break; fi
+		    # And we're done!
+		    BOOST_PYTHON_INCLUDES="-I$incdir"
+		    BOOST_PYTHON_LIBS="-lboost_python"
+		    PYTHON_LIBS="-l$pylib $extralibs"
+		    PYTHON_LDFLAGS="-L$pylibdir"
+		    __regina_py_ok=1
+		  ], [
+		    AC_MSG_RESULT([no])
+		  ])
+		  if test "$__regina_py_ok" = "1"; then break; fi
+		done
+              done
             done
           ], [
             AC_MSG_RESULT([no])
@@ -156,6 +164,7 @@ AC_DEFUN(REGINA_LIB_BOOST_PYTHON, [
 
     CXXFLAGS="$__regina_py_save_cxxflags"
     LDFLAGS="$__regina_py_save_ldflags"
+    LIBS="$__regina_py_save_libs"
 
     if test "$__regina_py_ok" = "1"; then
       AC_DEFINE(HAVE_BOOST_PYTHON, 1,
@@ -171,6 +180,7 @@ AC_DEFUN(REGINA_LIB_BOOST_PYTHON, [
   AC_LANG_POP(C++)
   AC_SUBST(BOOST_PYTHON_INCLUDES)
   AC_SUBST(BOOST_PYTHON_LIBS)
+  AC_SUBST(PYTHON_LDFLAGS)
   AC_SUBST(PYTHON_LIBS)
 ])
 
